# ComChan

./: .gitignore  404.html  BRAILLE.md  CHANGELOG.md  CONTRIBUTING.md  CRUSH.md  Cargo.toml  Grimoire.toml  OSCG_MENTOR_Guidelines.md  README.md  _typos.toml  cliff.toml  config.html  dist-workspace.toml  feedback.html  index.html  install.html  intro.html  other_features.html  out.cast  paper.bib  paper.md  print.html  searchindex.js  sensor_data.csv  serial_plotter.html  toc.html  toc.js  usage.html
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: lint.yml  release.yml
code_tests/Mock_IMU_Telemetry/: Mock_IMU_Telemetry.ino
code_tests/ble_server/: CMakeLists.txt  Justfile
code_tests/ble_server/.ccls-cache/@@home@vaishnav@Desktop@My_Projects@Zephyr_Programs@nrf52840dk@ble_server/: @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@ctype.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@errno.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@inttypes.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@limits.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@picolibc.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@stdint.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@stdio.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@stdlib.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@string.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@_wait.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@cdefs.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@errno.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@lock.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@time.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@sys@types.h.blob  @home@vaishnav@zephyr-sdk-1.0.1@gnu@arm-zephyr-eabi@arm-zephyr-eabi@include@time.h.blob  @home@vaishnav@zephyrproject@modules@hal@cmsis_6@CMSIS@Core@Include@cmsis_clang.h.blob  @home@vaishnav@zephyrproject@modules@hal@cmsis_6@CMSIS@Core@Include@cmsis_compiler.h.blob  @home@vaishnav@zephyrproject@modules@hal@cmsis_6@CMSIS@Core@Include@cmsis_version.h.blob  @home@vaishnav@zephyrproject@modules@hal@cmsis_6@CMSIS@Core@Include@core_cm4.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf51_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf51_to_nrf52840.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf52840.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf52_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf52_to_nrf52840.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf53_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf54h_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf54l_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf91_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf_erratas.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf_mem.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@nrf_peripherals.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@system_nrf52.c.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@system_nrf52.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@system_nrf52840.c.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@mdk@system_nrf52840.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@nrfx_bsp.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@nrfx_ext.h.blob  @home@vaishnav@zephyrproject@modules@hal@nordic@nrfx@bsp@stable@soc@nrfx_mdk_fixups.h.blob  (+600 more)
code_tests/ble_server/.ccls-cache/@home@vaishnav@Desktop@My_Projects@Zephyr_Programs@nrf52840dk@ble_server/: build@zephyr@include@generated@zephyr@autoconf.h  build@zephyr@include@generated@zephyr@autoconf.h.blob  build@zephyr@include@generated@zephyr@devicetree_generated.h  build@zephyr@include@generated@zephyr@devicetree_generated.h.blob  build@zephyr@include@generated@zephyr@heap_constants.h.blob  build@zephyr@include@generated@zephyr@kobj-types-enum.h.blob  build@zephyr@include@generated@zephyr@offsets.h.blob  build@zephyr@include@generated@zephyr@syscall_list.h  build@zephyr@include@generated@zephyr@syscall_list.h.blob  src@main.c  src@main.c.blob  (+15 more)
code_tests/random_sensor_vals/: random_sensor_vals.ino
code_tests/random_sensor_vals_multiple/: random_sensor_vals_multiple.ino
code_tests/side_side/bharat_chat/: bharat_chat.ino
code_tests/side_side/esp8266_chat/: esp8266_chat.ino  sketch.yaml
code_tests/test_comchan_arduino_uno/: test_comchan_arduino_uno.ino
code_tests/test_user_input/: test_user_input.ino
crates/ratatui-wireframe/: Cargo.toml  README.md
crates/ratatui-wireframe/src/: lib.rs  model.rs  widget.rs
crates/ratatui-wireframe/src/models/: cube.wrfm  octahedron.wrfm  tetrahedron.wrfm
css/: chrome.css  general.css
docs/: book.toml
docs/src/: SUMMARY.md  config.md  export_guide.md  feedback.md  install.md  intro.md  other_features.md  serial_plotter.md  usage.md
docs/theme/: index.hbs
docs/theme/css/: variables.css
src/: ai_explain.rs  ble.rs  config.rs  dual_ports.rs  export.rs  main.rs  monitor.rs  parser.rs  plotter.rs  port_finder.rs  replay.rs  rtt_reader.rs  serial.rs  shared_state.rs
