[package]
name = "comchan"
version = "0.6.0"
edition = "2024"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
license = "MIT"
description = "A Blazingly Fast and Minimal Serial Monitor for Embedded Applications"
readme = "README.md"
homepage = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
repository = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
keywords = ["cli", "embedded-systems", "serial-communication"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6.3"
clap_complete_nushell = "4.6.0"
crossterm = "0.29.0"
ctrlc = "3.5"
dirs = "6.0.0"
inline_colorization = "0.1.6"
plotters = "0.3.7"
pretty-hex = "0.4.2"
ratatui = "0.30.0"
ratatui-wireframe = { path = "crates/ratatui-wireframe" }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.9"
toml = "1.1.2"

[workspace]
members = [
  "crates/ratatui-wireframe"
]
