[package]
name = "comchan"
version = "0.10.1"
edition = "2024"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
license = "MIT"
description = "A Blazingly Fast and Minimal Serial Monitor for Embedded Applications"
readme = "README.md"
homepage = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
repository = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
keywords = ["cli", "embedded-systems", "serial-communication"]
categories = ["command-line-utilities", "embedded"]

[features]
default = []
ratty = ["dep:ratatui-ratty"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6.3"
clap_complete_nushell = "4.6.0"
crossterm = "0.29.0"
ctrlc = "3.5"
defmt-decoder = "1.1.0"
dirs = "6.0.0"
inline_colorization = "0.1.6"
object = "0.39.1"
plotters = "0.3.7"
pretty-hex = "0.4.2"
probe-rs = "0.31.0"
ratatui = "0.30.1"
ratatui-ratty = { version = "0.3.0", optional = true }
ratatui-wireframe = { version = "0.7.0", path = "crates/ratatui-wireframe", features = ["ratty"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.9"
toml = "1.1.2"
wrfm = "0.4.0"

[workspace]
members = [
  "crates/ratatui-wireframe"
]

[profile.dist]
inherits = "release"
lto = "thin"
