[package]
name = "ratatui-wireframe"
version = "0.6.0"
edition = "2024"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
license = "MIT"
description = "A lightweight, zero-dependency `ratatui` widget for rendering interactive 3D wireframe models in the terminal." 
readme = "README.md"
homepage = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
repository = "https://github.com/Vaishnav-Sabari-Girish/ComChan"
keywords = ["tui", "embedded-systems", "serial-communication"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
ratatui = { version = "0.30.0", default-features = false }
spin = { version = "0.12.0", default-features = false, features = ["once"] }
wrfm = { version = "0.4.0", default-features = false }

[features]
default = ["std"]
std = ["ratatui/layout-cache"]
